test(bookmark):Used constructor injection